Updated theme info

--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 /*
-Theme Name:     SocialBuddy Child Theme
-Theme URI:     http://herothemes.com/
-Description:    Child theme for SocialBuddy
-Author:     Chris Mooney (Swish Themes)
-Author URI:   http://herothemes.com
+Theme Name:     LKK Theme
+Description:    Theme for kidsakoder.no, a SocialBuddy child theme
+Author:     Benedicte (bGraphic)
+Author URI:   http://bgraphic.no
 Template:       socialbuddy
 Version:        1.0.0
 */
