--- a/style.css
+++ b/style.css
@@ -22,6 +22,17 @@ Version:        1.0.0
 
 /* ------- Home Page ------- */
 
+#feature-blocks {
+  background-color: #242E33;
+}
+
+#feature-blocks .sidebar-off #content {
+  width: 100%;
+  float: none;
+  margin: 0;
+  border: none;
+}
+
 #home-blocks a {
   color: inherit;
 }
