--- a/style.css
+++ b/style.css
@@ -33,6 +33,47 @@ Version:        1.0.0
   border: none;
 }
 
+#slidecallout {
+  background-color: #242E33;
+}
+
+#slidecallout .container {
+  background-color: white; 
+}
+
+#slidecallout #hpslider {
+  background-color: #e2e2e2; 
+}
+
+#callout {
+  border: none;
+  margin: 0;
+  padding: 0;
+  margin-right: 4.4%;
+}
+
+#callout .callout-left,
+#callout .callout-right {
+  float: none;
+  width: 100%;
+}
+
+#callout .callout-right .btn{
+  float: right;
+}
+
+#slidecallout .column {
+  margin-bottom: 0;
+}
+
+#hpslider .slides {
+  min-height: 245px;
+}
+
+#home-blocks {
+  margin-bottom: -30px;
+}
+
 #home-blocks a {
   color: inherit;
 }
